--- a/notebooks/CaliforniaHousing/6_FullPipeline.ipynb
+++ b/notebooks/CaliforniaHousing/6_FullPipeline.ipynb
@@ -1130,6 +1130,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Relative Error for Testing\n",
+      "FD 0.005\n",
+      "CL 0.084\n",
+      "HS 0.048\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Relative error test performance\n",
+    "print('Relative Error for Testing')\n",
+    "print(f'FD {np.abs(rfd_opt_mean_test_error - exact_opt_mean_test_error)/exact_opt_mean_test_error :.3f}')\n",
+    "print(f'CL {np.abs(cl_opt_mean_test_error - exact_opt_mean_test_error)/exact_opt_mean_test_error :.3f}')\n",
+    "print(f'HS {np.abs(hs_opt_mean_test_error - exact_opt_mean_test_error)/exact_opt_mean_test_error :.3f}')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
