--- a/notebooks/SongPredictions/YearPredictions.ipynb
+++ b/notebooks/SongPredictions/YearPredictions.ipynb
@@ -508,12 +508,12 @@
    "source": [
     "## Random Projection Methods\n",
     "\n",
-    "Same as above "
+    "Same as above but with the two random projection methods."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,16 +679,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc59f445d90>"
+       "<matplotlib.legend.Legend at 0x7f9c661d74d0>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
